--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,9 @@ primitive-types = "0.12.1"
 proptest = "1.4"
 
 # "Internal" dependencies
-zkevm_opcode_defs = "0.152.0"
-zk_evm_abstractions = "0.152.0"
-zk_evm = "0.152.0"
+zkevm_opcode_defs = { git = "https://github.com/matias-gonz/zksync-protocol", branch = "chore/upgrade-sha-deps-152" }
+zk_evm_abstractions = { git = "https://github.com/matias-gonz/zksync-protocol", branch = "chore/upgrade-sha-deps-152" }
+zk_evm = { git = "https://github.com/matias-gonz/zksync-protocol", branch = "chore/upgrade-sha-deps-152" }
 
 # Dependencies within the workspace
 zksync_vm2_interface = { version = "=0.4.0", path = "crates/vm2-interface" }
